# stm32-usbd-examples

example-stm32f303vc/: Cargo.toml  openocd.gdb
example-stm32f303vc/src/: main.rs
